--- a/.github/workflows/win.yml
+++ b/.github/workflows/win.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: my-artifact
-          path: ${{ github.workspace }}/luahttpclient
+          path: ${{ github.workspace }}/bin
 
       - name: Status
         uses: Sibz/github-status-action@v1
